--- a/fleet.html
+++ b/fleet.html
@@ -79,7 +79,7 @@
         />
         <meta name="theme-color" content="#ffffff" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Прогресс М — Транспортно-строительная компания</title>
+        <title>Наш автопарк — Прогресс М</title>
     </head>
     <body>
         <header class="header">
@@ -170,97 +170,72 @@
         </div>
 
         <main>
-            <section id="hero" class="hero-section">
-                <div class="hero-overlay"></div>
-                <div class="container">
-                    <h1 class="fade-in-section">
-                        Строим пути к успеху с Прогресс М — Ваш надежный партнер
-                        в строительстве!
-                    </h1>
-                    <p class="fade-in-section">
-                        Выполняем строительно-монтажные работы, занимаемся
-                        поставкой и перевозкой нерудных материалов по всей МО.
-                    </p>
-                    <a href="/contacts.html" class="btn fade-in-section"
-                        >Получить консультацию</a
-                    >
-                </div>
-            </section>
-
-            <section id="fleet-preview" class="fleet-section fade-in-section">
+            <section id="fleet" class="fleet-section fade-in-section">
                 <div class="container">
                     <h2>Наш автопарк</h2>
+                    <p class="section__description">
+                        Наша компания располагает современным и разнообразным
+                        автопарком спецтехники, готовой к выполнению задач любой
+                        сложности. Мы гарантируем надежность, своевременную
+                        подачу и отличное техническое состояние каждой единицы.
+                    </p>
                     <div class="fleet-grid">
                         <div class="fleet-item">
                             <img
                                 src="/src/images/carpark/car-1.jpg"
-                                alt="Самосвал FAW"
+                                alt="Самосвал FAW J6"
                             />
-                            <p>FAW J6 CA3310</p>
+                            <p>Самосвал FAW J6 CA3310</p>
                         </div>
                         <div class="fleet-item">
                             <img
                                 src="/src/images/carpark/car-2.jpg"
-                                alt="Самосвал КАМАЗ"
+                                alt="Самосвал КАМАЗ-6520"
                             />
                             <p>Самосвал КАМАЗ-6520</p>
                         </div>
                         <div class="fleet-item">
                             <img
                                 src="/src/images/carpark/car-3.jpg"
-                                alt="Автокран Liebherr"
+                                alt="Автокран Liebherr LTM 1050"
                             />
                             <p>Автокран Liebherr LTM 1050</p>
                         </div>
-                    </div>
-                    <div class="section__actions">
-                        <a href="/fleet.html" class="btn"
-                            >Смотреть весь автопарк</a
-                        >
-                    </div>
-                </div>
-            </section>
-
-            <section
-                id="partners-preview"
-                class="partners-section fade-in-section"
-            >
-                <div class="container">
-                    <h2>Нам доверяют</h2>
-                    <div class="partners-logos">
-                        <img
-                            src="/src/images/partners/fsk.png"
-                            alt="Логотип партнера ФСК"
-                        />
-                        <img
-                            src="/src/images/partners/ao-urs.png"
-                            alt="Логотип партнера АО УРС"
-                        />
-                        <img
-                            src="/src/images/partners/samolet.png"
-                            alt="Логотип партнера Самолет"
-                        />
-                        <img
-                            src="/src/images/partners/autoban.png"
-                            alt="Логотип партнера Автобан"
-                        />
-                        <img
-                            src="/src/images/partners/darstroy.png"
-                            alt="Логотип партнера Дарстрой"
-                        />
-                        <img
-                            src="/src/images/partners/transingstroy.png"
-                            alt="Логотип партнера Трансинжстрой"
-                        />
-                        <img
-                            src="/src/images/partners/tsm.png"
-                            alt="Логотип партнера ТСМ"
-                        />
-                    </div>
-                    <div class="section__actions">
-                        <a href="/reviews.html" class="btn"
-                            >Читать отзывы клиентов</a
-                        >
+                        <div class="fleet-item">
+                            <img
+                                src="/src/images/carpark/car-4.jpg"
+                                alt="Экскаватор-погрузчик JCB 3CX"
+                            />
+                            <p>Экскаватор-погрузчик JCB 3CX</p>
+                        </div>
+                        <div class="fleet-item">
+                            <img
+                                src="/src/images/carpark/car-5.jpg"
+                                alt="Бульдозер Caterpillar D6T"
+                            />
+                            <p>Бульдозер Caterpillar D6T</p>
+                        </div>
+                        <div class="fleet-item">
+                            <img
+                                src="/src/images/carpark/car-6.jpg"
+                                alt="Фронтальный погрузчик SDLG 953"
+                            />
+                            <p>Фронтальный погрузчик SDLG 953</p>
+                        </div>
+                        <div class="fleet-item">
+                            <img
+                                src="/src/images/carpark/car-7.jpg"
+                                alt="Автогрейдер ДЗ-98"
+                            />
+                            <p>Автогрейдер ДЗ-98</p>
+                        </div>
+                        <div class="fleet-item">
+                            <img
+                                src="/src/images/carpark/car-8.jpg"
+                                alt="Манипулятор КАМАЗ-65117"
+                            />
+                            <p>Манипулятор КАМАЗ-65117</p>
+                        </div>
                     </div>
                 </div>
             </section>
