--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
         />
         <meta name="theme-color" content="#ffffff" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Прогресс М — Транспортно-строительная компания</title>
+        <title>О компании — Прогресс М</title>
     </head>
     <body>
         <header class="header">
@@ -170,97 +170,82 @@
         </div>
 
         <main>
-            <section id="hero" class="hero-section">
-                <div class="hero-overlay"></div>
+            <section id="about" class="stats-section fade-in-section">
                 <div class="container">
-                    <h1 class="fade-in-section">
-                        Строим пути к успеху с Прогресс М — Ваш надежный партнер
-                        в строительстве!
-                    </h1>
-                    <p class="fade-in-section">
-                        Выполняем строительно-монтажные работы, занимаемся
-                        поставкой и перевозкой нерудных материалов по всей МО.
-                    </p>
-                    <a href="/contacts.html" class="btn fade-in-section"
-                        >Получить консультацию</a
-                    >
-                </div>
-            </section>
-
-            <section id="fleet-preview" class="fleet-section fade-in-section">
-                <div class="container">
-                    <h2>Наш автопарк</h2>
-                    <div class="fleet-grid">
-                        <div class="fleet-item">
-                            <img
-                                src="/src/images/carpark/car-1.jpg"
-                                alt="Самосвал FAW"
-                            />
-                            <p>FAW J6 CA3310</p>
+                    <h2 class="heading--light">О компании в цифрах</h2>
+                    <div class="stats-grid">
+                        <div class="stat-item">
+                            <strong data-target="2" data-suffix="+">0</strong>
+                            <span>лет на рынке</span>
                         </div>
-                        <div class="fleet-item">
-                            <img
-                                src="/src/images/carpark/car-2.jpg"
-                                alt="Самосвал КАМАЗ"
-                            />
-                            <p>Самосвал КАМАЗ-6520</p>
+                        <div class="stat-item">
+                            <strong data-target="50" data-suffix="+">0</strong>
+                            <span>единиц в автопарке</span>
                         </div>
-                        <div class="fleet-item">
-                            <img
-                                src="/src/images/carpark/car-3.jpg"
-                                alt="Автокран Liebherr"
-                            />
-                            <p>Автокран Liebherr LTM 1050</p>
+                        <div class="stat-item">
+                            <strong data-target="100" data-suffix="+">0</strong>
+                            <span>успешно сданных объектов</span>
                         </div>
-                    </div>
-                    <div class="section__actions">
-                        <a href="/fleet.html" class="btn"
-                            >Смотреть весь автопарк</a
-                        >
+                        <div class="stat-item">
+                            <strong data-target="24/7">24/7</strong>
+                            <span>на связи с клиентом</span>
+                        </div>
                     </div>
                 </div>
             </section>
 
-            <section
-                id="partners-preview"
-                class="partners-section fade-in-section"
-            >
+            <section id="advantages" class="advantages-section fade-in-section">
                 <div class="container">
-                    <h2>Нам доверяют</h2>
-                    <div class="partners-logos">
-                        <img
-                            src="/src/images/partners/fsk.png"
-                            alt="Логотип партнера ФСК"
-                        />
-                        <img
-                            src="/src/images/partners/ao-urs.png"
-                            alt="Логотип партнера АО УРС"
-                        />
-                        <img
-                            src="/src/images/partners/samolet.png"
-                            alt="Логотип партнера Самолет"
-                        />
-                        <img
-                            src="/src/images/partners/autoban.png"
-                            alt="Логотип партнера Автобан"
-                        />
-                        <img
-                            src="/src/images/partners/darstroy.png"
-                            alt="Логотип партнера Дарстрой"
-                        />
-                        <img
-                            src="/src/images/partners/transingstroy.png"
-                            alt="Логотип партнера Трансинжстрой"
-                        />
-                        <img
-                            src="/src/images/partners/tsm.png"
-                            alt="Логотип партнера ТСМ"
-                        />
-                    </div>
-                    <div class="section__actions">
-                        <a href="/reviews.html" class="btn"
-                            >Читать отзывы клиентов</a
-                        >
+                    <h2>Наши преимущества</h2>
+                    <div class="advantages-grid">
+                        <div class="advantage-item">
+                            <img
+                                src="/icons/carpark.png"
+                                alt="Иконка автопарка"
+                                class="advantage-icon"
+                            />
+                            <h3>Собственный автопарк</h3>
+                            <p>
+                                Гарантия наличия техники и лучших цен, без
+                                посредников.
+                            </p>
+                        </div>
+                        <div class="advantage-item">
+                            <img
+                                src="/icons/team.png"
+                                alt="Иконка команды"
+                                class="advantage-icon"
+                            />
+                            <h3>Опытная команда</h3>
+                            <p>
+                                Квалифицированные бригады и водители с
+                                многолетним стажем.
+                            </p>
+                        </div>
+                        <div class="advantage-item">
+                            <img
+                                src="/icons/deadline.png"
+                                alt="Иконка сроков"
+                                class="advantage-icon"
+                            />
+                            <h3>Точное соблюдение сроков</h3>
+                            <p>
+                                Работаем строго по графику, прописанному в
+                                договоре.
+                            </p>
+                        </div>
+                        <div class="advantage-item">
+                            <img
+                                src="/icons/quality.png"
+                                alt="Иконка качества"
+                                class="advantage-icon"
+                            />
+                            <h3>Гарантия качества</h3>
+                            <p>
+                                Используем сертифицированные материалы и
+                                современные технологии.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </section>
