--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
         />
         <meta name="theme-color" content="#ffffff" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Прогресс М — Транспортно-строительная компания</title>
+        <title>Выполненные проекты — Прогресс М</title>
     </head>
     <body>
         <header class="header">
@@ -170,97 +170,49 @@
         </div>
 
         <main>
-            <section id="hero" class="hero-section">
-                <div class="hero-overlay"></div>
+            <section id="portfolio" class="portfolio-section fade-in-section">
                 <div class="container">
-                    <h1 class="fade-in-section">
-                        Строим пути к успеху с Прогресс М — Ваш надежный партнер
-                        в строительстве!
-                    </h1>
-                    <p class="fade-in-section">
-                        Выполняем строительно-монтажные работы, занимаемся
-                        поставкой и перевозкой нерудных материалов по всей МО.
-                    </p>
-                    <a href="/contacts.html" class="btn fade-in-section"
-                        >Получить консультацию</a
-                    >
-                </div>
-            </section>
-
-            <section id="fleet-preview" class="fleet-section fade-in-section">
-                <div class="container">
-                    <h2>Наш автопарк</h2>
-                    <div class="fleet-grid">
-                        <div class="fleet-item">
+                    <h2>Выполненные проекты</h2>
+                    <div class="portfolio-grid">
+                        <div class="project-card">
                             <img
-                                src="/src/images/carpark/car-1.jpg"
-                                alt="Самосвал FAW"
+                                src="/src/images/projects/project_1.jpg"
+                                alt="Проект 1"
                             />
-                            <p>FAW J6 CA3310</p>
+                            <div class="project-info">
+                                <h3>Строительство подъездной дороги</h3>
+                                <p>
+                                    Укладка асфальта на площади 2000 м² для
+                                    склада "Озон".
+                                </p>
+                            </div>
                         </div>
-                        <div class="fleet-item">
+                        <div class="project-card">
                             <img
-                                src="/src/images/carpark/car-2.jpg"
-                                alt="Самосвал КАМАЗ"
+                                src="/src/images/projects/project_2.jpg"
+                                alt="Проект 2"
                             />
-                            <p>Самосвал КАМАЗ-6520</p>
+                            <div class="project-info">
+                                <h3>Разработка котлована</h3>
+                                <p>
+                                    Земляные работы для фундамента жилого
+                                    комплекса "Центральный".
+                                </p>
+                            </div>
                         </div>
-                        <div class="fleet-item">
+                        <div class="project-card">
                             <img
-                                src="/src/images/carpark/car-3.jpg"
-                                alt="Автокран Liebherr"
+                                src="/src/images/projects/project_3.jpg"
+                                alt="Проект 3"
                             />
-                            <p>Автокран Liebherr LTM 1050</p>
+                            <div class="project-info">
+                                <h3>Демонтаж старого цеха</h3>
+                                <p>
+                                    Полный снос и вывоз строительного мусора с
+                                    территории завода.
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="section__actions">
-                        <a href="/fleet.html" class="btn"
-                            >Смотреть весь автопарк</a
-                        >
-                    </div>
-                </div>
-            </section>
-
-            <section
-                id="partners-preview"
-                class="partners-section fade-in-section"
-            >
-                <div class="container">
-                    <h2>Нам доверяют</h2>
-                    <div class="partners-logos">
-                        <img
-                            src="/src/images/partners/fsk.png"
-                            alt="Логотип партнера ФСК"
-                        />
-                        <img
-                            src="/src/images/partners/ao-urs.png"
-                            alt="Логотип партнера АО УРС"
-                        />
-                        <img
-                            src="/src/images/partners/samolet.png"
-                            alt="Логотип партнера Самолет"
-                        />
-                        <img
-                            src="/src/images/partners/autoban.png"
-                            alt="Логотип партнера Автобан"
-                        />
-                        <img
-                            src="/src/images/partners/darstroy.png"
-                            alt="Логотип партнера Дарстрой"
-                        />
-                        <img
-                            src="/src/images/partners/transingstroy.png"
-                            alt="Логотип партнера Трансинжстрой"
-                        />
-                        <img
-                            src="/src/images/partners/tsm.png"
-                            alt="Логотип партнера ТСМ"
-                        />
-                    </div>
-                    <div class="section__actions">
-                        <a href="/reviews.html" class="btn"
-                            >Читать отзывы клиентов</a
-                        >
                     </div>
                 </div>
             </section>
