--- a/services.html
+++ b/services.html
@@ -79,7 +79,7 @@
         />
         <meta name="theme-color" content="#ffffff" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Прогресс М — Транспортно-строительная компания</title>
+        <title>Наши услуги — Прогресс М</title>
     </head>
     <body>
         <header class="header">
@@ -170,97 +170,79 @@
         </div>
 
         <main>
-            <section id="hero" class="hero-section">
-                <div class="hero-overlay"></div>
+            <section id="services" class="services-section fade-in-section">
                 <div class="container">
-                    <h1 class="fade-in-section">
-                        Строим пути к успеху с Прогресс М — Ваш надежный партнер
-                        в строительстве!
-                    </h1>
-                    <p class="fade-in-section">
-                        Выполняем строительно-монтажные работы, занимаемся
-                        поставкой и перевозкой нерудных материалов по всей МО.
-                    </p>
-                    <a href="/contacts.html" class="btn fade-in-section"
-                        >Получить консультацию</a
-                    >
-                </div>
-            </section>
+                    <h2 class="page-title">Наши услуги</h2>
+                    <div class="services-category">
+                        <h3 class="services-category__title">
+                            Поставка материалов
+                        </h3>
+                        <div class="services-grid">
+                            <div class="service-card">
+                                <h4>Поставка песка</h4>
+                                <p>
+                                    Карьерный, мытый и речной песок различных
+                                    фракций — мелкий, средний и крупный.
+                                </p>
+                            </div>
+                            <div class="service-card">
+                                <h4>Поставка гравийного щебня</h4>
+                                <p>
+                                    Фракции 3-5, 3-10, 5-20, 20-40 и 40-70 мм
+                                    для разных строительных задач.
+                                </p>
+                            </div>
+                            <div class="service-card">
+                                <h4>Поставка известнякового щебня</h4>
+                                <p>
+                                    Фракции 5-20, 20-40 и 40-70 мм, обеспечивая
+                                    высокое качество и надежность.
+                                </p>
+                            </div>
+                            <div class="service-card">
+                                <h4>Смеси ЩПС С4 и С5</h4>
+                                <p>
+                                    Щебеночно-песчаные смеси марок С4 и С5 для
+                                    эффективного использования в строительстве.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
 
-            <section id="fleet-preview" class="fleet-section fade-in-section">
-                <div class="container">
-                    <h2>Наш автопарк</h2>
-                    <div class="fleet-grid">
-                        <div class="fleet-item">
-                            <img
-                                src="/src/images/carpark/car-1.jpg"
-                                alt="Самосвал FAW"
-                            />
-                            <p>FAW J6 CA3310</p>
+                    <div class="services-category">
+                        <h3 class="services-category__title">
+                            Строительно-монтажные работы
+                        </h3>
+                        <div class="services-grid">
+                            <div class="service-card">
+                                <h4>Устройство ограждающих конструкций</h4>
+                                <p>
+                                    Монтаж конструкций, обеспечивающих надежную
+                                    защиту и долговечность зданий.
+                                </p>
+                            </div>
+                            <div class="service-card">
+                                <h4>Возведение стен и перегородок</h4>
+                                <p>
+                                    Кладка из газоблока, кирпича, ПГП и блоков
+                                    СКЦ с гарантией качества.
+                                </p>
+                            </div>
+                            <div class="service-card">
+                                <h4>Устройство кровли</h4>
+                                <p>
+                                    Профессиональный монтаж кровли любого типа с
+                                    использованием современных материалов.
+                                </p>
+                            </div>
+                            <div class="service-card">
+                                <h4>Отделочные работы</h4>
+                                <p>
+                                    Выполнение черновых и чистовых отделочных
+                                    работ для создания эстетичного интерьера.
+                                </p>
+                            </div>
                         </div>
-                        <div class="fleet-item">
-                            <img
-                                src="/src/images/carpark/car-2.jpg"
-                                alt="Самосвал КАМАЗ"
-                            />
-                            <p>Самосвал КАМАЗ-6520</p>
-                        </div>
-                        <div class="fleet-item">
-                            <img
-                                src="/src/images/carpark/car-3.jpg"
-                                alt="Автокран Liebherr"
-                            />
-                            <p>Автокран Liebherr LTM 1050</p>
-                        </div>
-                    </div>
-                    <div class="section__actions">
-                        <a href="/fleet.html" class="btn"
-                            >Смотреть весь автопарк</a
-                        >
-                    </div>
-                </div>
-            </section>
-
-            <section
-                id="partners-preview"
-                class="partners-section fade-in-section"
-            >
-                <div class="container">
-                    <h2>Нам доверяют</h2>
-                    <div class="partners-logos">
-                        <img
-                            src="/src/images/partners/fsk.png"
-                            alt="Логотип партнера ФСК"
-                        />
-                        <img
-                            src="/src/images/partners/ao-urs.png"
-                            alt="Логотип партнера АО УРС"
-                        />
-                        <img
-                            src="/src/images/partners/samolet.png"
-                            alt="Логотип партнера Самолет"
-                        />
-                        <img
-                            src="/src/images/partners/autoban.png"
-                            alt="Логотип партнера Автобан"
-                        />
-                        <img
-                            src="/src/images/partners/darstroy.png"
-                            alt="Логотип партнера Дарстрой"
-                        />
-                        <img
-                            src="/src/images/partners/transingstroy.png"
-                            alt="Логотип партнера Трансинжстрой"
-                        />
-                        <img
-                            src="/src/images/partners/tsm.png"
-                            alt="Логотип партнера ТСМ"
-                        />
-                    </div>
-                    <div class="section__actions">
-                        <a href="/reviews.html" class="btn"
-                            >Читать отзывы клиентов</a
-                        >
                     </div>
                 </div>
             </section>
